[package]
name = "entry-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", default-features = false, features = ["clock", "serde"] }
derive_more = "0.99.7"
env_logger = "0.11"
eyre = { version = "0.6", default-features = false, features = ["auto-install", "track-caller"] }
color-eyre = "0.6"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log = "0.4"
rand = "0.8"
slab = "0.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
envy = "0.4.2"

tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread", "net"]}
hyper = { version = "1.2.0", features = ["full"]}
tower = "0.4.13"
hyper-util = { version = "0.1.3", features = ["full"]}
axum = { version = "0.7.4", features = ["http2", "macros", "multipart", "ws", "tokio"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
axum-client-ip = "0.5.1"
